--- a/package.json
+++ b/package.json
@@ -18,47 +18,73 @@
     },
 
     "extensionPack": [ 
-        "Angular.ng-template", 
-        "batisteo.vscode-django", 
-        "CoenraadS.bracket-pair-colorizer-2", 
-        "dbaeumer.vscode-eslint", 
-        "donjayamanne.python-extension-pack", 
-        "ecmel.vscode-html-css", 
-        "EditorConfig.EditorConfig", 
-        "eg2.vscode-npm-script", 
-        "Equinusocio.vsc-community-material-theme", 
-        "Equinusocio.vsc-material-theme", 
-        "equinusocio.vsc-material-theme-icons", 
-        "esbenp.prettier-vscode", 
-        "felixfbecker.php-debug", 
-        "felixfbecker.php-intellisense", 
-        "felixfbecker.php-pack", 
-        "firefox-devtools.vscode-firefox-debug", 
-        "formulahendry.auto-close-tag", 
-        "formulahendry.auto-complete-tag", 
-        "formulahendry.auto-rename-tag", 
-        "googlecloudtools.cloudcode", 
-        "humao.rest-client", 
-        "johnpapa.angular-essentials", 
-        "johnpapa.Angular2", 
-        "johnpapa.vscode-peacock", 
-        "johnpapa.winteriscoming", 
-        "magicstack.MagicPython", 
-        "ms-python.python", 
-        "ms-vscode-remote.remote-containers", 
-        "ms-vscode-remote.remote-wsl", 
-        "msjsdiag.debugger-for-chrome", 
-        "msjsdiag.debugger-for-edge", 
-        "nrwl.angular-console", 
-        "PKief.material-icon-theme", 
-        "ritwickdey.live-sass", 
-        "ritwickdey.LiveServer", 
-        "s-kainet.rest-client", 
-
-        "sidthesloth.html5-boilerplate", 
-        "techer.open-in-browser", 
-        "tht13.html-preview-vscode", 
-        "VisualStudioExptTeam.vscodeintellicode", 
-        "wholroyd.jinja"
+        "Equinusocio.vsc-community-material-theme",
+        "PKief.material-icon-theme",
+        "ritwickdey.LiveServer",
+        "steoates.autoimport",
+        "formulahendry.auto-rename-tag",
+        "formulahendry.auto-close-tag",
+        "CoenraadS.bracket-pair-colorizer-2",
+        "alefragnani.Bookmarks",
+        "sidthesloth.html5-boilerplate",
+        "ecmel.vscode-html-css",
+        "tht13.html-preview-vscode",
+        "oderwat.indent-rainbow",
+        "esbenp.prettier-vscode",
+        "techer.open-in-browser",
+        "EditorConfig.EditorConfig",
+        "msjsdiag.debugger-for-chrome",
+        "HookyQR.beautify",
+        "xabikos.JavaScriptSnippets",
+        "christian-kohler.path-intellisense",
+        "Zignd.html-css-class-completion",
+        "streetsidesoftware.code-spell-checker",
+        "wix.vscode-import-cost",
+        "VisualStudioExptTeam.vscodeintellicode",
+        "pflannery.vscode-versionlens",
+        "eg2.vscode-npm-script",
+        "mikestead.dotenv",
+        "aaron-bond.better-comments",
+        "Gruntfuggly.todo-tree",
+        "wmaurer.change-case",
+        "sysoev.language-stylus",
+        "sibiraj-s.vscode-scss-formatter",
+        "wwm.better-align",
+        "geeebe.duplicate",
+        "doi.fileheadercomment",
+        "johnpapa.vscode-peacock",
+        "formulahendry.code-runner",
+        "tomoki1207.pdf",
+        "WakaTime.vscode-wakatime",
+        "pnp.polacode",
+        "IBM.output-colorizer",
+        "ryu1kn.partial-diff",
+        "wmaurer.vscode-jumpy",
+        "alexdima.copy-relative-path",
+        "stkb.rewrap",
+        "nhoizey.gremlins",
+        "slevesque.vscode-multiclip",
+        "akhail.save-typing",
+        "metaseed.metago",
+        "CodeStream.codestream",
+        "mhutchie.git-graph",
+        "donjayamanne.githistory",
+        "GitHub.vscode-pull-request-github",
+        "codezombiech.gitignore",
+        "MS-vsliveshare.vsliveshare-pack",
+        "Shan.code-settings-sync",
+        "alefragnani.project-manager",
+        "pranaygp.vscode-css-peek",
+        "mgmcdermott.vscode-language-babel",
+        "dbaeumer.vscode-eslint",
+        "spoonscen.es6-mocha-snippets",
+        "christian-kohler.npm-intellisense",
+        "jasonnutter.search-node-modules",
+        "ms-vscode.vscode-typescript-tslint-plugin",
+        "yzhang.markdown-all-in-one",
+        "DavidAnson.vscode-markdownlint",
+        "jpagano.wordpress-vscode-extensionpack",
+        "laurencebahiirwa.elementor-snippets",
+        "ikappas.composer"
     ]
 }
