--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "web-dev-essentials",
-    "displayName": "Web_Dev_Essentials",
-    "description": "",
+    "displayName": "Web Development Essentials",
+    "description": "Web Development Essentials Extension Pack for Visual Studio Code",
     "version": "0.0.1",
     "icon": "icon.png",
     "publisher": "JillMNolan",
@@ -85,6 +85,10 @@
         "DavidAnson.vscode-markdownlint",
         "jpagano.wordpress-vscode-extensionpack",
         "laurencebahiirwa.elementor-snippets",
-        "ikappas.composer"
+        "ikappas.composer",
+        "onecentlin.php-productive-pack",
+        "ohnbillion.vscode-wordpress-hooks",
+        "ValeryanM.vscode-phpsab",
+        "Wscats.eno"
     ]
 }
