--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-development-essentials",
+    "name": "web-dev-essentials",
     "displayName": "Web Development Essentials",
     "description": "Web Development Essentials Extension Pack for Visual Studio Code",
     "version": "0.0.3",
