updated extensions in extension pack

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "formulahendry.auto-rename-tag",
         "formulahendry.auto-close-tag",
         "CoenraadS.bracket-pair-colorizer-2",
+        "waderyan.nodejs-extension-pack",
         "alefragnani.Bookmarks",
         "sidthesloth.html5-boilerplate",
         "ecmel.vscode-html-css",
@@ -36,13 +37,11 @@
         "msjsdiag.debugger-for-chrome",
         "HookyQR.beautify",
         "xabikos.JavaScriptSnippets",
-        "christian-kohler.path-intellisense",
         "Zignd.html-css-class-completion",
         "streetsidesoftware.code-spell-checker",
         "wix.vscode-import-cost",
         "VisualStudioExptTeam.vscodeintellicode",
         "pflannery.vscode-versionlens",
-        "eg2.vscode-npm-script",
         "mikestead.dotenv",
         "aaron-bond.better-comments",
         "Gruntfuggly.todo-tree",
@@ -76,10 +75,7 @@
         "alefragnani.project-manager",
         "pranaygp.vscode-css-peek",
         "mgmcdermott.vscode-language-babel",
-        "dbaeumer.vscode-eslint",
         "spoonscen.es6-mocha-snippets",
-        "christian-kohler.npm-intellisense",
-        "jasonnutter.search-node-modules",
         "ms-vscode.vscode-typescript-tslint-plugin",
         "yzhang.markdown-all-in-one",
         "DavidAnson.vscode-markdownlint",
@@ -89,6 +85,10 @@
         "onecentlin.php-productive-pack",
         "ohnbillion.vscode-wordpress-hooks",
         "ValeryanM.vscode-phpsab",
-        "Wscats.eno"
+        "Wscats.eno",
+        "firefox-devtools.vscode-firefox-debug",
+        "msjsdiag.debugger-for-edge",
+        "PrimaFuture.open-php-html-js-in-browser",
+        "oouo-diogo-perdigao.docthis"
     ]
 }
